styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.explore-header > h1 {
  @apply hover:underline selection:underline;
}

.results {
  @apply flex flex-col gap-5
}

.results > div > div > a {
  @apply no-underline
}

h1 {
    @apply font-bold text-[2em]
}

h2 {
    @apply font-bold text-[1.5em]
}

h3 {
    @apply font-bold text-[1.17em]
}

h4 {
    @apply font-bold text-[1em]
}

h5 {
    @apply font-bold text-[0.83em]
}

h6 {
    @apply font-bold text-[0.67rem]
}

.hidden-label > .navds-label {
  @apply hidden;
}

.select__control {
  @apply border-border-strong hover:border-border-focus min-h-[48px] !important;
}

.select__option {
  @apply hover:bg-border-focus hover:text-text-on-inverted !important;
}

.select__option--is-focused {
  @apply bg-border-focus text-text-on-inverted !important;
}

.select__control--is-focused {
  @apply border-border-focus border-2 hover:border-border-focus !important;
}

.select__menu-list {
  @apply max-h-28 !important;
}

.select__dropdown-indicator,
.select__indicator-separator {
  @apply hidden !important;
}

.MuiTreeItem-label {
  /* sorry for normal css */
  font-size: 1.125rem !important;
  line-height: 1.5rem !important;
  letter-spacing: 0 !important;
  font-family: var(--navds-font-family) !important;
  appearance: none !important;
}

.MuiTreeView-root {
  @apply w-full border border-border-strong rounded p-1 !important;
}

.MuiTreeItem-content {
  @apply px-2 py-1 hover:bg-surface-action-subtle-hover hover:text-text-default !important;
}

.Mui-selected {
  @apply bg-surface-action-selected text-text-on-inverted hover:bg-surface-action hover:text-text-on-inverted !important;
}

.react-tags {
  @apply w-full
}

.react-tags__search-wrapper .navds-text-field__input {
  @apply w-full !important
}

.nada-product-area-link {
  @apply no-underline !important
}

.nada-product-area-link:hover > div > div > div {
  @apply text-text-action underline
}

.nada-product-area-link:focus > div > div > div {
  @apply text-white
}

.nada-product-area-link:focus > div > p {
  @apply text-white
}

.nada-product-area-link > div > p {
  @apply text-text-default
}

.nada-search-result {
  @apply shadow shadow-border-divider md:shadow-none border-4 border-transparent no-underline text-text-default hover:bg-gray-100 hover:shadow hover:shadow-border-divider rounded-lg focus:bg-gray-100 active:bg-gray-100 focus:border-text-action-on-action-subtle active:border-text-action-on-action-subtle focus:text-text-default active:text-text-default !important
}

.nada-search-result:hover > div > div > div > h2 {
  @apply text-text-action underline
}

.children-fullwidth > :not(div) {
  @apply max-w-3xl
}

.children-fullwidth > div {
  @apply w-full
}

.svg-scale:hover > svg {
  @apply scale-125
}

.nada-logo {
  background-image: url("/favicon.svg");
  background-repeat: no-repeat;
  background-size: contain;
}

.nada-slash {
  background-image: url("/slash.svg");
  background-repeat: no-repeat;
  background-size: contain;
}

.expore-areas-icon {
  background-image: url("/explore-areas.svg");
  background-repeat: no-repeat;
  background-size: contain;
}

ol {
    list-style-type: decimal;
    list-style-position: inside;
}

ul {
    list-style-type: disc;
    list-style-position: inside;
}

a {
  color: inherit;
  text-decoration: underline;
}

a:hover {
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

.js-plotly-plot .plotly .modebar .modebar-group {
    display: flex;
}

